Scrooll code added

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.chatScroll::-webkit-scrollbar {
+    width: 3px;
+}
+
+.chatScroll::-webkit-scrollbar-thumb {
+    background-color: #2364a5;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
