--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .chatScroll::-webkit-scrollbar-thumb {
-    background-color: #2364a5;
+    background-color: #ff714a;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
