button code added

--- a/src/Components/Pages/About/About.css
+++ b/src/Components/Pages/About/About.css
@@ -1,8 +1,9 @@
 .button-orange {
     padding: 8px 30px;
-    border: 2px solid var(--background-orange);
+    border: 1.5px solid var(--background-orange);
     font-size: var(--font-size-14);
-    transition: var(--transition-default);
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-duration: 700ms;
 }
 
 :root {
